--- a/BabySmash/BabySmash.csproj
+++ b/BabySmash/BabySmash.csproj
@@ -3,12 +3,15 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
-        
-        <AssemblyName>BabySmash</AssemblyName>
-        <AssemblyVersion>1.0.2.0</AssemblyVersion>
         <ProductName>BabySmash!</ProductName>
         <Copyright>Copyright ©2008 Scott Hanselman</Copyright>
         <Company>Scott Hanselman</Company>
+        <UpdateUrl>http://www.hanselman.com/BabySmash/</UpdateUrl>
+        <SupportUrl>http://feedback.babysmash.com</SupportUrl>
+        <ProductName>BabySmash!</ProductName>
+        <PublisherName>BabySmash</PublisherName>
+        <ApplicationRevision>99</ApplicationRevision>
+        <ApplicationVersion>1.1.0.%2a</ApplicationVersion>
     </PropertyGroup>
     <ItemGroup>
         <AvaloniaResource Include="Resources\**" />
